<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_ken"
        android:title="@string/action_ken"
        android:orderInCategory="0"
        android:icon="@drawable/ic_action_hand"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_advanced"
        android:title="@string/action_advanced"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_advanced_remove"
        android:title="@string/action_advanced_remove"
        android:orderInCategory="4"
        app:showAsAction="never" />


</menu>
