<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/black">

        <Button
            android:id="@+id/zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_graph_zoom_in"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/zoom_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_graph_zoom_reset"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_graph_zoom_out"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>
